--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
+.App{
+  padding-bottom: 30px;
+}
+
+.StarshipList{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.StarshipDiv{
+  padding: 20px;
+}
+
+.Starship{
+  width: 400px;
+  background-color: blanchedalmond;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.Starship:hover{
+  background-color: rgb(225, 73, 23);
+}
+
+.Header{
+  background-color: rgb(242, 43, 43);
+  color: white;
+  text-align: center;
+  padding: 1px;
+}
+
+.ButtonDiv{
+  display: flex;
+  justify-content: center;
+}
+
+.ShowMoreButton{
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(255, 34, 34);
+  color: white;
+  padding: 15px;
+  margin: 10px;
+}
+
+.StarshipPage{
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ShowMoreButton:hover{
+  background-color: blanchedalmond;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table {
+  border-collapse: collapse;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
 
-.App-link {
-  color: #61dafb;
+.NavLink{
+  text-decoration: none;
+  color: white
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.NavLink:hover{
+  color: rgb(167, 201, 188);
 }
